# MetricsOne-Backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: .env.example  Cargo.toml
api/src/: main.rs  settings.rs
api/src/models/: driver.rs  meeting.rs  mod.rs  team.rs
api/src/services/: mod.rs
api/src/services/grpc/: meetings.rs  mod.rs
api/src/services/http/: drivers.rs  meetings.rs  mod.rs  sessions.rs  teams.rs
api/src/services/query_preparer/: insert.rs  mod.rs  select.rs
common/grpc/: Cargo.toml
common/grpc/src/: lib.rs  utils.rs
common/grpc/src/interceptor/: tracing.rs
common/grpc/src/serde/: mod.rs
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/models/: Cargo.toml
common/models/src/: driver.rs  images.rs  lib.rs  meetings.rs  sessions.rs  teams.rs
common/models/src/queue/: mod.rs
common/proto/: Cargo.toml  build.rs
common/proto/proto/: fetch.proto  insert.proto
common/proto/src/: lib.rs  timestamp_format.rs
common/proto/src/serde/: gmt_offset.rs  timestamp.rs
common/queue/: Cargo.toml
common/queue/src/: lib.rs
common/queue/src/models/: meetings.rs
common/utils/: Cargo.toml
common/utils/src/: grpc.rs  lib.rs  otel.rs  utils.rs
database/: init.sql  setup.bat
database/data/: postmaster.pid
database/data/base/1/: 2619  2696  2840  2841  pg_internal.init
database/data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  18777  18778  18786  18787  18789  18791  18792  18799  18800  18802  18809  18810  18817  18818  18820  18822  18824  18828  18829  18836  18840  18841  2224  2224_vm  2579  2604  2604_fsm  2604_vm  2606  2606_fsm  2606_vm  (+42 more)
database/data/base/4/: 2619
database/data/global/: 1260  1262  2396  2671  2676  pg_control  pg_internal.init
database/data/pg_xact/: 0000
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: prometheus.yml
otel/: config.yml
prometheus/: prometheus.yml
worker/: .env.example  Cargo.toml
worker/src/: main.rs  settings.rs
worker/src/fetch/: meetings.rs
worker/src/grpc/: meetings.rs  mod.rs
worker/src/models/: meeting.rs  mod.rs  session.rs
