[workspace]
resolver = "3"
members = ["api", "worker", "common/proto", "common/utils", "common/macros"]

[workspace.dependencies]
metrics_one_proto = { path = "./common/proto" }
metrics_one_macros = { path = "./common/macros" }
metrics_one_utils = { path = "./common/utils" }
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.11"
once_cell = "1.21.3"
prost-types = "0.13.5"
