[workspace]
resolver = "3"
members = [
  "api",
  "worker",
  "common/macros",
  "common/proto",
  "common/queue",
  "common/utils",
]

[workspace.dependencies]
metrics_one_macros = { path = "./common/macros" }
metrics_one_proto = { path = "./common/proto" }
metrics_one_queue = { path = "./common/queue" }
metrics_one_utils = { path = "./common/utils" }
tokio = { version = "1", features = ["full"] }
tonic = "0.13.1"
lapin = "3.0.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
] }
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.13"
once_cell = "1.21.3"
prost-types = "^0.13.5"
