[package]
name = "metrics_one_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics_one_proto = { workspace = true }
metrics_one_queue = { workspace = true }
metrics_one_utils = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
lapin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
config = { workspace = true }
once_cell = { workspace = true }
prost-types = { workspace = true }
tokio-stream = "0.1.17"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
] }
