[package]
name = "metrics_one_grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
metrics_one_macros = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
prost = "0.13.5"
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"
prost-wkt-types = "0.6.1"
